--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -60,45 +60,303 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/food1"
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:drawableTop="@android:drawable/ic_dialog_info"
-                android:text="Button\n30 min" />
+                android:layout_margin="4dp"
+                app:cardBackgroundColor="@color/white"
+                android:outlineProvider="background"
+                app:cardElevation="8dp">
 
-            <Button
-                android:id="@+id/food2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:drawableTop="@drawable/ic_home"
-                android:text="Button\n20min" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
 
-            <Button
-                android:id="@+id/food3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:drawableTop="@drawable/ic_profile"
-                android:text="Button\n20min" />
 
-            <Button
-                android:id="@+id/foo4"
-                android:layout_width="wrap_content"
+                    <ImageView
+                        android:id="@+id/imageview_food1"
+                        android:layout_width="100dp"
+                        android:layout_height="70dp"
+                        android:scaleType="centerCrop"
+                        android:layout_margin="4dp"/>
+                    <TextView
+                        android:id="@+id/textview_title1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:singleLine="false"
+                        android:scrollHorizontally="true"
+                        android:textStyle="bold"
+                        android:text="Dish name"
+                        android:textSize="15dp"
+                        android:padding="2dp"
+                        android:gravity="center"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView_timer1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="30 MIN"
+                            android:textSize="10dp"
+                            android:textStyle="bold"
+                            android:padding="4dp"
+                            android:gravity="end"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_timer" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/button_style"
-                android:drawableTop="@drawable/ic_profile"
-                android:text="Button\n8min" />
+                android:layout_margin="4dp"
+                app:cardBackgroundColor="@color/white"
+                android:outlineProvider="background"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+
+                    <ImageView
+                        android:id="@+id/imageview_food2"
+                        android:layout_width="100dp"
+                        android:layout_height="70dp"
+                        android:scaleType="centerCrop"
+                        android:layout_margin="4dp"/>
+                    <TextView
+                        android:id="@+id/textview_title2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:singleLine="false"
+                        android:scrollHorizontally="true"
+                        android:textStyle="bold"
+                        android:text="Dish name"
+                        android:textSize="15dp"
+                        android:padding="2dp"
+                        android:gravity="center"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView_timer2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="30 MIN"
+                            android:textSize="10dp"
+                            android:textStyle="bold"
+                            android:padding="4dp"
+                            android:gravity="end"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_timer" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                app:cardBackgroundColor="@color/white"
+                android:outlineProvider="background"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+
+                    <ImageView
+                        android:id="@+id/imageview_food3"
+                        android:layout_width="100dp"
+                        android:layout_height="70dp"
+                        android:scaleType="centerCrop"
+                        android:layout_margin="4dp"/>
+                    <TextView
+                        android:id="@+id/textview_title3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:singleLine="false"
+                        android:scrollHorizontally="true"
+                        android:textStyle="bold"
+                        android:text="Dish name"
+                        android:textSize="15dp"
+                        android:padding="2dp"
+                        android:gravity="center"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView_timer3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="30 MIN"
+                            android:textSize="10dp"
+                            android:textStyle="bold"
+                            android:padding="4dp"
+                            android:gravity="end"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_timer" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                app:cardBackgroundColor="@color/white"
+                android:outlineProvider="background"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+
+                    <ImageView
+                        android:id="@+id/imageview_food4"
+                        android:layout_width="100dp"
+                        android:layout_height="70dp"
+                        android:scaleType="centerCrop"
+                        android:layout_margin="4dp"/>
+                    <TextView
+                        android:id="@+id/textview_title4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:singleLine="false"
+                        android:scrollHorizontally="true"
+                        android:textStyle="bold"
+                        android:text="Dish name"
+                        android:textSize="15dp"
+                        android:padding="2dp"
+                        android:gravity="center"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView_timer4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="30 MIN"
+                            android:textSize="10dp"
+                            android:textStyle="bold"
+                            android:padding="4dp"
+                            android:gravity="end"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_timer" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                app:cardBackgroundColor="@color/white"
+                android:outlineProvider="background"
+                app:cardElevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" >
+
+
+                    <ImageView
+                        android:id="@+id/imageview_food5"
+                        android:layout_width="100dp"
+                        android:layout_height="70dp"
+                        android:scaleType="centerCrop"
+                        android:layout_margin="4dp"/>
+                    <TextView
+                        android:id="@+id/textview_title5"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:singleLine="false"
+                        android:scrollHorizontally="true"
+                        android:textStyle="bold"
+                        android:text="Dish name"
+                        android:textSize="15dp"
+                        android:padding="2dp"
+                        android:gravity="center"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView_timer5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="30 MIN"
+                            android:textSize="10dp"
+                            android:textStyle="bold"
+                            android:padding="4dp"
+                            android:gravity="end"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_timer" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+
 
         </LinearLayout>
     </HorizontalScrollView>
