--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_nav"
@@ -19,4 +20,21 @@
         android:name="com.example.madchef.SearchMenu"
         android:label="activity_search_menu"
         tools:layout="@layout/activity_search_menu" />
+
+
+    <fragment
+        android:id="@+id/DestcookingBook"
+        android:name="com.example.madchef.CookingBook"
+        android:label="fragment_cooking_book"
+        tools:layout="@layout/fragment_cooking_book" >
+        <action
+            android:id="@+id/action_cookingBook_to_CB_Preference"
+            app:destination="@id/DestCB_Preference" />
+    </fragment>
+    <fragment
+        android:id="@+id/DestCB_Preference"
+        android:name="com.example.madchef.CB_Preference"
+        android:label="CB_Preference" />
+
+
 </navigation>
