--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,6 +12,7 @@
         android:layout_height="67dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showPhoneNum" />
 
@@ -21,6 +22,7 @@
         android:layout_height="67dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showBD" />
 
@@ -86,6 +88,7 @@
         android:layout_height="67dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView20" />
 
@@ -95,6 +98,7 @@
         android:layout_height="67dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showName" />
 
@@ -134,19 +138,6 @@
         app:layout_constraintTop_toBottomOf="@+id/showPhoneNum"
         app:srcCompat="@drawable/mail" />
 
-    <Button
-        android:id="@+id/saveBtn"
-        android:layout_width="127dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="140dp"
-        android:backgroundTint="#9999E4"
-        android:text="edit profile"
-        android:textSize="14sp"
-        app:cornerRadius="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/showEmail" />
-
     <ImageView
         android:id="@+id/imageView21"
         android:layout_width="197dp"
@@ -157,5 +148,18 @@
         app:layout_constraintTop_toTopOf="@+id/imageView16"
         app:layout_constraintVertical_bias="0.592"
         app:srcCompat="@drawable/profile_pic" />
+
+    <Button
+        android:id="@+id/editProf"
+        android:layout_width="127dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="140dp"
+        android:backgroundTint="#9999E4"
+        android:text="edit profile"
+        android:textSize="14sp"
+        app:cornerRadius="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/showEmail" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
