Bottom Nav, New XML, etc

--- a/app/src/main/res/layout/activity_search_menu.xml
+++ b/app/src/main/res/layout/activity_search_menu.xml
@@ -8,17 +8,32 @@
     android:orientation="vertical"
     tools:context=".SearchMenu">
 
-
-    <androidx.appcompat.widget.SearchView
+    <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/menuSearch"
-        android:background="#e6e6fa"
-        app:iconifiedByDefault="false"
-        app:queryHint="Search recipe"
-        />
+        android:background="#e6e6fa">
 
-    <ListView
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/menuSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_toStartOf="@id/but_filter"
+            android:background="#e6e6fa"
+            app:iconifiedByDefault="false"
+            app:queryHint="Search recipe" />
+
+        <ImageView
+            android:id="@+id/but_filter"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_filter" />
+
+    </androidx.appcompat.widget.Toolbar>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/menulist"
