--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -33,7 +33,7 @@
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/recycler_random" />
 
 
     <ImageView
@@ -47,370 +47,47 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/black" />
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="136dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_random"
+        android:layout_width="407dp"
+        android:layout_height="153dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/check_text">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                app:cardBackgroundColor="@color/white"
-                android:outlineProvider="background"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+        app:layout_constraintTop_toBottomOf="@+id/check_text"
+        android:orientation="horizontal">
 
 
-                    <ImageView
-                        android:id="@+id/imageview_food1"
-                        android:layout_width="100dp"
-                        android:layout_height="70dp"
-                        android:scaleType="centerCrop"
-                        android:layout_margin="4dp"/>
-                    <TextView
-                        android:id="@+id/textview_title1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="marquee"
-                        android:singleLine="false"
-                        android:scrollHorizontally="true"
-                        android:textStyle="bold"
-                        android:text="Dish name"
-                        android:textSize="15dp"
-                        android:padding="2dp"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView_timer1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="30 MIN"
-                            android:textSize="10dp"
-                            android:textStyle="bold"
-                            android:padding="4dp"
-                            android:gravity="end"/>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_timer" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                app:cardBackgroundColor="@color/white"
-                android:outlineProvider="background"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-
-                    <ImageView
-                        android:id="@+id/imageview_food2"
-                        android:layout_width="100dp"
-                        android:layout_height="70dp"
-                        android:scaleType="centerCrop"
-                        android:layout_margin="4dp"/>
-                    <TextView
-                        android:id="@+id/textview_title2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="marquee"
-                        android:singleLine="false"
-                        android:scrollHorizontally="true"
-                        android:textStyle="bold"
-                        android:text="Dish name"
-                        android:textSize="15dp"
-                        android:padding="2dp"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView_timer2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="30 MIN"
-                            android:textSize="10dp"
-                            android:textStyle="bold"
-                            android:padding="4dp"
-                            android:gravity="end"/>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_timer" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                app:cardBackgroundColor="@color/white"
-                android:outlineProvider="background"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-
-                    <ImageView
-                        android:id="@+id/imageview_food3"
-                        android:layout_width="100dp"
-                        android:layout_height="70dp"
-                        android:scaleType="centerCrop"
-                        android:layout_margin="4dp"/>
-                    <TextView
-                        android:id="@+id/textview_title3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="marquee"
-                        android:singleLine="false"
-                        android:scrollHorizontally="true"
-                        android:textStyle="bold"
-                        android:text="Dish name"
-                        android:textSize="15dp"
-                        android:padding="2dp"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView_timer3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="30 MIN"
-                            android:textSize="10dp"
-                            android:textStyle="bold"
-                            android:padding="4dp"
-                            android:gravity="end"/>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_timer" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                app:cardBackgroundColor="@color/white"
-                android:outlineProvider="background"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-
-                    <ImageView
-                        android:id="@+id/imageview_food4"
-                        android:layout_width="100dp"
-                        android:layout_height="70dp"
-                        android:scaleType="centerCrop"
-                        android:layout_margin="4dp"/>
-                    <TextView
-                        android:id="@+id/textview_title4"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="marquee"
-                        android:singleLine="false"
-                        android:scrollHorizontally="true"
-                        android:textStyle="bold"
-                        android:text="Dish name"
-                        android:textSize="15dp"
-                        android:padding="2dp"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView_timer4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="30 MIN"
-                            android:textSize="10dp"
-                            android:textStyle="bold"
-                            android:padding="4dp"
-                            android:gravity="end"/>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_timer" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                app:cardBackgroundColor="@color/white"
-                android:outlineProvider="background"
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-
-                    <ImageView
-                        android:id="@+id/imageview_food5"
-                        android:layout_width="100dp"
-                        android:layout_height="70dp"
-                        android:scaleType="centerCrop"
-                        android:layout_margin="4dp"/>
-                    <TextView
-                        android:id="@+id/textview_title5"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="marquee"
-                        android:singleLine="false"
-                        android:scrollHorizontally="true"
-                        android:textStyle="bold"
-                        android:text="Dish name"
-                        android:textSize="15dp"
-                        android:padding="2dp"
-                        android:gravity="center"/>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView_timer5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="30 MIN"
-                            android:textSize="10dp"
-                            android:textStyle="bold"
-                            android:padding="4dp"
-                            android:gravity="end"/>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_timer" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-
-
-        </LinearLayout>
-    </HorizontalScrollView>
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/foodTab"
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/foodTypeSelection"
         android:layout_width="346dp"
         android:layout_height="63dp"
         android:layout_marginTop="20dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Eat_text"
-        app:tabBackground="@drawable/selector_tab"
-        app:tabIndicatorHeight="0dp"
-        app:tabTextAppearance="@style/TabTextStyle"
-        app:tabTextColor="@color/black">
+        android:entries="@array/tags"
+        android:background="#e6e6fa">
 
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Breakfast"
-            tools:layout_editor_absoluteX="34dp"
-            tools:layout_editor_absoluteY="417dp" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lunch"
-            tools:layout_editor_absoluteX="109dp"
-            tools:layout_editor_absoluteY="560dp" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Dinner"
-            tools:layout_editor_absoluteX="252dp"
-            tools:layout_editor_absoluteY="432dp" />
-
-    </com.google.android.material.tabs.TabLayout>
+    </androidx.appcompat.widget.AppCompatSpinner>
 
 
-    <androidx.viewpager2.widget.ViewPager2
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/foodsuggest"
         android:layout_width="346dp"
         android:layout_height="217dp"
-        android:layout_below="@+id/foodTab"
+        android:layout_below="@+id/foodTypeSelection"
         android:background="@drawable/viewpager_style"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/foodTab" />
+        app:layout_constraintTop_toBottomOf="@+id/foodTypeSelection" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
