--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -2,19 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
+    <item
+        android:id="@+id/Book"
+        android:icon="@drawable/ic_book"
+        android:title="Book"/>
     <item
         android:id="@+id/Community"
         android:icon="@drawable/community"
-        android:title="community"/>
+        android:title="Community"/>
     <item
         android:id="@+id/Home"
         android:icon="@drawable/ic_home"
-        android:title="home"/>
+        android:title="Home"/>
     <item
         android:id="@+id/Profile"
         android:icon="@drawable/ic_profile"
-        android:title="profile"/>
+        android:title="Profile"/>
 
 
 
