--- a/app/src/main/res/layout/fragment_main_home.xml
+++ b/app/src/main/res/layout/fragment_main_home.xml
@@ -7,87 +7,50 @@
     android:layout_height="wrap_content"
     tools:context=".Main_home">
 
+
     <TextView
         android:id="@+id/check_text"
         android:layout_width="265dp"
         android:layout_height="67dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/inika"
         android:text="Check out \nthis cuisine Today!"
-        android:textSize="24dp"
         android:textColor="@color/black"
+        android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/Eat_text"
-        android:layout_width="269dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/inika"
-        android:textColor="@color/black"
-        android:text="What are you eating ?"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_random" />
-
-
-    <ImageView
-        android:id="@+id/random_recipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
-        android:src="@drawable/ic_random"
-        app:layout_constraintStart_toEndOf="@+id/check_text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/black" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_random"
-        android:layout_width="407dp"
-        android:layout_height="153dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="411dp"
+        android:layout_height="460dp"
+        android:layout_marginTop="34dp"
+        android:background="#e6e6fa"
+        android:foregroundGravity="center"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/check_text"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toBottomOf="@+id/check_text">
 
 
     </androidx.recyclerview.widget.RecyclerView>
 
-
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/foodTypeSelection"
-        android:layout_width="346dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="20dp"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Eat_text"
+        android:layout_width="164dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="244dp"
+        android:layout_marginBottom="34dp"
+        android:background="#e6e6fa"
         android:entries="@array/tags"
-        android:background="#e6e6fa">
+        android:gravity="center"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_random"
+        app:layout_constraintStart_toStartOf="parent">
 
 
     </androidx.appcompat.widget.AppCompatSpinner>
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/foodsuggest"
-        android:layout_width="346dp"
-        android:layout_height="217dp"
-        android:layout_below="@+id/foodTypeSelection"
-        android:background="@drawable/viewpager_style"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/foodTypeSelection" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
