--- a/app/src/main/res/layout/toolbar_custom.xml
+++ b/app/src/main/res/layout/toolbar_custom.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_baseline_settings_24" />
+            android:src="@drawable/ic_setting" />
 
     </RelativeLayout>
 
