--- a/app/src/main/res/layout/fragment_cooking_book.xml
+++ b/app/src/main/res/layout/fragment_cooking_book.xml
@@ -18,6 +18,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/fragment_container"
             app:layout_constraintTop_toBottomOf="parent">
 
     <Button
