--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -18,6 +18,10 @@
         android:id="@+id/Profile"
         android:icon="@drawable/ic_profile"
         android:title="Profile"/>
+    <item
+        android:id="@+id/MealPlan"
+        android:icon="@drawable/ic_bowl"
+        android:title="Meal Plan"/>
 
 
 
