--- a/app/src/main/res/layout/activity_share_recipe1.xml
+++ b/app/src/main/res/layout/activity_share_recipe1.xml
@@ -114,7 +114,7 @@
             android:textSize="15dp"/>
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/image_added"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginTop="470dp"
