--- a/app/src/main/res/layout/toolbar_custom.xml
+++ b/app/src/main/res/layout/toolbar_custom.xml
@@ -15,13 +15,13 @@
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/setting_button"
+            android:layout_toStartOf="@id/sharepost"
             android:layout_marginEnd="16dp"
             android:layout_centerVertical="true"
             android:src="@drawable/ic_search" />
 
         <ImageView
-            android:id="@+id/setting_button"
+            android:id="@+id/sharepost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
